--- a/screen.css
+++ b/screen.css
@@ -11,49 +11,9 @@ body {
 	line-height: 1;
 }
 
-ol, ul {
-	list-style: none;
-}
-
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-caption, th, td {
-	text-align: left;
-	font-weight: normal;
-	vertical-align: middle;
-}
-
-q, blockquote {
-	quotes: none;
-}
- 
-q:before, q:after, blockquote:before, blockquote:after {
-	content: "";
-	content: none;
-}
-
-a img {
-	border: none;
-}
-
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
-	display: block;
-}
-
 body {
 	font-family: sans-serif;
 	color: #2a2a2a;
-}
-
-a {
-	color: #0388a6;
-}
-
-a:hover {
-	color: #009ce0;
 }
 
 #main {
@@ -66,6 +26,7 @@ color: dodgerblue;
 h1 {
 background-color: powderblue;
 height: 180px;
+text-align:center;
 }
 p {
 font-size: 300%;
